--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
-    "name": "ghost-starter-theme",
-    "description": "A custom theme for ghost",
-    "demo": "https://starter.ghost.io",
+    "name": "normal-ghost",
+    "description": "A Ghost theme for Normally Notes",
     "version": "1.0.0",
     "engines": {
         "ghost": ">=3.0.0",
@@ -21,9 +20,9 @@
         "ship": "STATUS=$(git status --porcelain); echo $STATUS; if [ -z \"$STATUS\" ]; then yarn version && git push --follow-tags; fi"
     },
     "author": {
-        "name": "Ghost Foundation",
-        "email": "hello@ghost.org",
-        "url": "https://ghost.org"
+        "name": "Basil Safwat (based on Ghost Starter)",
+        "email": "basil@normally.com",
+        "url": "https://normally.com"
     },
     "gpm": {
         "type": "theme",
@@ -39,10 +38,8 @@
     ],
     "repository": {
         "type": "git",
-        "url": "https://github.com/TryGhost/Starter.git"
+        "url": "https://github.com/Normally/normal-ghost"
     },
-    "bugs": "https://github.com/TryGhost/Starter/issues",
-    "contributors": "https://github.com/TryGhost/Starter/graphs/contributors",
     "devDependencies": {
         "autoprefixer": "9.8.3",
         "cssnano": "4.1.10",
